--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.pica</groupId>
     <artifactId>hoptoad-java-notifier</artifactId>
     <packaging>jar</packaging>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0</version>
     <name>Hoptoad Java Notifier</name>
 
     <parent>
