--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.pica</groupId>
     <artifactId>hoptoad-java-notifier</artifactId>
     <packaging>jar</packaging>
-    <version>2.1</version>
+    <version>2.2-SNAPSHOT</version>
     <name>Hoptoad Java Notifier</name>
 
     <parent>
@@ -57,6 +57,11 @@
             <artifactId>mockito-all</artifactId>
             <version>1.6</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
         </dependency>
     </dependencies>
 </project>
